# storylabs

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: story.py
backend/app/api/models/: story_generation.py
backend/app/storybuilder/: config.py  image_generator.ipynb  story_markdown_generator.ipynb  storybuilder_notebook.ipynb  voice_generator.ipynb
backend/app/storybuilder/prompts/: childs_info.txt  generator.md  generator.txt  reading_level_guide.txt  story_outline.txt  writer.txt
backend/app/storybuilder/stories/Caitlin_2024-12-15_21-04-25_1e282f9988ac45aeb1f0bfb002b68a89/: characters.md  main.md  scene_story.md  scenes.md
backend/app/storybuilder/stories/Caitlin_2024-12-15_21-16-56_56f191f66a854aaabb7067e5f37fe42a/: characters.md  main.md  scene_fairy_land_intro.md  scene_finding_the_dress.md  scene_meeting_barbie.md  scenes.md
backend/output/: generated_story_level_2.txt  generated_story_level_3.txt  generated_story_level_6.txt  generated_story_level_7.txt  generated_story_level_8.txt  generated_story_level_9.txt
backend/output/gpt-4o/: generated_story_level_2.txt  generated_story_level_7.txt
backend/output/gpt-4o-mini/: generated_story_level_10.txt  generated_story_level_4.txt  generated_story_level_5.txt  generated_story_scenes_level_2.json
backend/stories/xavier/: characters.md  main.md  scene_banana_planet.md  scene_launch_pad.md  scene_outer_space.md  scenes.md
frontend/: Dockerfile  (+7 more)
(+35 files in other folders)
