[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Story generation backend API"
authors = ["Cheng Yong <8086930+chengyongyeo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12"
fastapi = {version = "0.115.5", extras = ["standard"]}
openai = "1.55.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
